charts/redis-cluster/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: redis
  namespace: redis
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - redis.itblast.ovh
  rules:
    - host: redis.itblast.ovh
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: activemq-broker-hdls-svc
                port:
                  #name: web
                  number: 8161
